# ai-monsters

./: .gitignore  DESIGN.md  MEMORY.md  PLAN.md  README.md  docker-compose.yml
.docker/: Dockerfile.spacetime
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
client/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
client/.next/cache/: .previewinfo  .rscinfo
client/.next/dev/: _events_1563372.json  lock  prerender-manifest.json  trace
client/.next/diagnostics/: route-bundle-stats.json
client/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
client/.next/types/: validator.ts
client/src/app/: DESIGN.md  globals.css  layout.tsx  page.tsx
client/src/components/: Button.tsx  Card.tsx  CollectionGallery.tsx  DailyCardGenerator.tsx  DraggableGameBoard.tsx  EnhancedCard.tsx  EnhancedCardGenerator.tsx  GameBoard.tsx  GameLobby.tsx  (+10 more)
client/test/: e2e-game-loop.mjs  e2e-game-loop.ts  e2e-two-player-matchmaking.ts
memory/: 2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-30.md
scripts/: setup-docker.sh
server/: Cargo.toml  spacetime.json  spacetime.local.json
server/src/: bot_ai.rs  card_generator.rs  daily_cards.rs  lib.rs  main.rs  matchmaking.rs  procedures.rs  reducers.rs  tables.rs  types.rs  views.rs
(+300 files in other folders)
