[package]
name = "ai-monsters-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_monsters_server"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rand temporarily disabled due to wasm compilation issues
# rand = { version = "0.8", features = ["small_rng", "rand_chacha"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
spacetime-db = "*"
